--- a/SmartMonitoring/Properties/Resources.resx
+++ b/SmartMonitoring/Properties/Resources.resx
@@ -121,11 +121,11 @@
   <data name="actions_view_list_details" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\actions-view-list-details.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="devices_system" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\devices-system.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="devices_computer" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\devices-computer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="actions_media_start" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\actions-media-start.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="apps_preferences_config" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\apps-preferences-config.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -133,11 +133,11 @@
   <data name="actions_view_file_columns" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\actions-view-file-columns.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="actions_window_close" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\actions-window-close.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="devices_ram" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\devices-ram.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="preferences_desktop_font_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\preferences-desktop-font-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="actions_document_save_all" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\actions-document-save-all.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -184,8 +184,11 @@
   <data name="actions_window_new" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\actions-window-new.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="actions_project_development" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\actions-project-development.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="users" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\users.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="apps_preferences_about" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\apps-preferences-about.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="devices_system2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\devices-system2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -199,8 +202,8 @@
   <data name="apps_preferences_config2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\apps-preferences-config2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="apps_preferences_about" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\apps-preferences-about.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="preferences_desktop_font_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\preferences-desktop-font-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="actions_document_save" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\actions-document-save.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -208,11 +211,11 @@
   <data name="actions_charts_chart4" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\actions-charts-chart4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="actions_window_normal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\actions-window-normal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="actions_charts_chart1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\actions-charts-chart1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="devices_modem" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\devices-modem.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="devices_nas3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\devices-nas3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -220,14 +223,14 @@
   <data name="devices_cpu" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\devices-cpu.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="actions_window_close" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\actions-window-close.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="devices_modem" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\devices-modem.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="actions_media_start" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\actions-media-start.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="devices_system" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\devices-system.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="actions_window_normal" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\actions-window-normal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="actions_project_development" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\actions-project-development.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="devices_system3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\devices-system3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -244,7 +247,7 @@
   <data name="actions_charts_pie" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\actions-charts-pie.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="users" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\users.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="servers_groups" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\servers_groups.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
