--- a/SmartMonitoring/Properties/Resources.resx
+++ b/SmartMonitoring/Properties/Resources.resx
@@ -121,11 +121,11 @@
   <data name="actions_view_list_details" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\actions-view-list-details.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="devices_system" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\devices-system.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="devices_computer" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\devices-computer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="actions_media_start" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\actions-media-start.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="apps_preferences_config" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\apps-preferences-config.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -133,8 +133,8 @@
   <data name="actions_view_file_columns" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\actions-view-file-columns.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="actions_window_close" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\actions-window-close.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Search2_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Search2_24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="devices_ram" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\devices-ram.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -163,17 +163,14 @@
   <data name="actions_charts_chart3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\actions-charts-chart3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="actions_media_eject" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\actions-media-eject.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="devices_nas2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\devices-nas2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="apps_tools_database" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\apps-tools-database.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="actions_media_stop" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\actions-media-stop.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="servers_groups" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\servers_groups.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="actions_document_open_folder" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\actions-document-open-folder.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -187,8 +184,11 @@
   <data name="users" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\users.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="apps_preferences_about" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\apps-preferences-about.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="cancel_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cancel_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="actions_project_development" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\actions-project-development.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="devices_system2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\devices-system2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -202,8 +202,8 @@
   <data name="apps_preferences_config2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\apps-preferences-config2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="preferences_desktop_font_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\preferences-desktop-font-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="apps_preferences_about" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\apps-preferences-about.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="actions_document_save" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\actions-document-save.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -211,11 +211,20 @@
   <data name="actions_charts_chart4" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\actions-charts-chart4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="power" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\power.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="actions_window_normal" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\actions-window-normal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="actions_charts_chart1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\actions-charts-chart1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="search_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\search_24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="devices_modem" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\devices-modem.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="devices_nas3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\devices-nas3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -223,17 +232,23 @@
   <data name="devices_cpu" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\devices-cpu.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="devices_modem" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\devices-modem.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="actions_window_close" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\actions-window-close.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="devices_system" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\devices-system.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="actions_media_start" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\actions-media-start.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="actions_project_development" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\actions-project-development.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="actions_media_eject" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\actions-media-eject.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="devices_system3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\devices-system3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="actions_media_stop" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\actions-media-stop.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="preferences_desktop_font_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\preferences-desktop-font-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="devices_nas1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\devices-nas1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -247,7 +262,7 @@
   <data name="actions_charts_pie" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\actions-charts-pie.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="servers_groups" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\servers_groups.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Search2_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Search2_16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
